[gd_scene load_steps=3 format=3 uid="uid://c75sg7q60ookq"]

[ext_resource type="Script" uid="uid://cql44mes0oniw" path="res://Menu/reward_container.gd" id="1_bv30d"]
[ext_resource type="Texture2D" uid="uid://cf8tp7bo0q7ev" path="res://icon.svg" id="2_llqco"]

[node name="RewardContainer" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_bv30d")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
flat = true

[node name="VBoxContainer" type="VBoxContainer" parent="Button"]
layout_mode = 0
offset_right = 128.0
offset_bottom = 155.0

[node name="NameLabel" type="Label" parent="Button/VBoxContainer"]
layout_mode = 2
text = "REWARD_NAME"

[node name="TextureRect" type="TextureRect" parent="Button/VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_llqco")

[node name="EffectLabel" type="Label" parent="Button/VBoxContainer"]
layout_mode = 2
text = "REWARD_EFFECT"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
